Alteração para Spring Authorization Server